--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "cross-env": "7.0.3",
+    "helmet": "7.0.0",
     "pg": "8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
