--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@nestjs/config": "3.0.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "10.1.1",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "10.2.5",
+    "@nestjs/serve-static": "4.0.0",
     "@nestjs/swagger": "7.1.10",
     "@nestjs/typeorm": "10.0.0",
     "bcryptjs": "2.4.3",
@@ -44,6 +45,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "1.4.7",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
